# browser-agent

./: .env.example  .gitignore  Dockerfile  README.md  browser-agent.postman_collection.json  browser-scraper.postman_collection.json  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
src/browser_agent/api/: router.py  schemas.py
src/browser_agent/providers/: claro.py  copel.py
src/browser_scraper/: main.py
src/browser_scraper/api/: router.py  schemas.py
src/browser_scraper/jobs/: manager.py
src/browser_scraper/providers/: base.py  browser_factory.py  claro.py  copel.py  countfly.py  registry.py  sanepar.py
tests/: test_api.py  test_job_manager.py
