[project]
name = "browser-agent"
version = "0.1.0"
description = "Browser automation agent for fetching utility bills and emitting invoices"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "browser-use>=0.2.0",
    "playwright>=1.40.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
